# lab13

./: CMakeLists.txt  README.md  otchet.md
_builds/: CMakeCache.txt  Makefile  Person.yml  cmake_install.cmake  pack  unpack
_builds/_3rdParty/Hunter/: install-root-dir
_builds/_3rdParty/Hunter/config-id/: config.cmake
_builds/_3rdParty/Hunter/toolchain/_builds/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/Hunter/: config.cmake
sources/: pack.cpp  unpack.cpp
